# DebugMcpServer

./: .gitignore  DebugMcpServer.slnx  Directory.Packages.props  README.md  pr.md
.github/workflows/: ci.yml  release.yml
samples/: test_linux_mcp.sh
samples/CrashTarget/: CrashTarget.csproj  Program.cs
samples/NativeCrashTarget/: CMakeLists.txt  generate_linux_dump.sh  main.cpp
samples/SampleTarget/: Program.cs
src/DebugMcpServer/: DebugMcpServer.csproj  Program.cs  appsettings.json
src/DebugMcpServer/Dap/: DapErrorHelper.cs  DapEvent.cs  DapSession.cs  DapSessionException.cs  DapSessionRegistry.cs  IDapSession.cs  SessionState.cs  SourceBreakpoint.cs  SshHelper.cs
src/DebugMcpServer/DbgEng/: DbgEngNative.cs  DbgEngOutputCapture.cs  DbgEngSession.cs  NativeDumpRegistry.cs
src/DebugMcpServer/DotnetDump/: DotnetDumpRegistry.cs  DotnetDumpSession.cs
src/DebugMcpServer/Options/: DebugOptions.cs
src/DebugMcpServer/Server/: McpHostedService.cs
src/DebugMcpServer/Tools/: AttachToProcessTool.cs  ChangeThreadTool.cs  ContinueExecutionTool.cs  DetachSessionTool.cs  DisassembleTool.cs  DotnetDumpAsyncStateTool.cs  DotnetDumpExceptionsTool.cs  DotnetDumpFindObjectsTool.cs  DotnetDumpGcRootsTool.cs  DotnetDumpHeapStatsTool.cs  DotnetDumpInspectTool.cs  DotnetDumpMemoryStatsTool.cs  DotnetDumpStackObjectsTool.cs  DotnetDumpThreadsTool.cs  EvaluateExpressionTool.cs  ExecutionToolBase.cs  GetCallStackTool.cs  GetExceptionInfoTool.cs  GetLoadedSourcesTool.cs  GetModulesTool.cs  GetPendingEventsTool.cs  (+28 more)
tests/DebugMcpServer.Tests/: DebugMcpServer.Tests.csproj
(+59 files in other folders)
